crux-mir/test/symb_eval/overrides/override2.good
test override2/3a1fbbbh::f[0]: FAILED

failures:

---- override2/3a1fbbbh::f[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   ./lib/crucible/lib.rs:36:41: 36:58 !test/symb_eval/overrides/override2.rs:9:5: 9:50: error: in override2/3a1fbbbh::f[0]
[Crux]   MIR assertion at test/symb_eval/overrides/override2.rs:9:5:
[Crux]   	foo.wrapping_add(1) == foo

[Crux] Overall status: Invalid.
